[package]
name = "usage"
version = "1.4.0"
edition = "2021"
license = "MIT"
description = "A convenient alternative to the newtype pattern."
repository = "https://github.com/Shfty/usage/"
keywords = ["newtype", "alternative", "classification"]
categories = ["data-structures", "rust-patterns"]

[dependencies]
rayon = { version = "1.5.1", optional = true }
bytemuck = { version = "1.7.3", optional = true }
